argocd/manifests/prod/apps/media/arr/bazarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
    app.kubernetes.io/name: bazarr
spec:
  serviceName: bazarr
  replicas: 1

  podManagementPolicy: OrderedReady

  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0

  selector:
    matchLabels:
      app: bazarr

  template:
    metadata:
      labels:
        app: bazarr
        app.kubernetes.io/name: bazarr
    spec:
      securityContext:
        runAsUser: 327  #all processes in the pod run with user ID 321
        runAsGroup: 321  # same but for groups
        fsGroup: 321 # owner of attached volume is group 321
      containers:
        - name: bazarr
          image: ghcr.io/hotio/bazarr:release-1.6.2
          securityContext:
            runAsUser: 0  # Temporary root for setup, not great, but does not work otherwise
            # runAsGroup: 321 # also needed here
            # fsGroup: 321 # also needed here
            allowPrivilegeEscalation: true
          imagePullPolicy: Always
          ports:
          - containerPort: 6767
          resources:
            requests:
              memory: "512Mi"
              cpu: "10m"
            limits:
              memory: "1G"
              cpu: "200m"
          volumeMounts:
            - mountPath: /config
              name: config-storage
            - mountPath: /data
              name: media-storage
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: pvc-media   # PVC for data storage

  # Automatically manages config PVC - won't be deleted on rollouts
  volumeClaimTemplates:
  - metadata:
      name: config-storage
      annotations:
        k8up.io/backup: "true"
    spec:
      storageClassName: synology-storage-apps
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
  labels:
    app.kubernetes.io/name: bazarr
spec:
  selector:
    app: bazarr
  ports:
  - name: http
    port: 80 # we talk to this
    protocol: TCP
    targetPort: 6767 # app listens here
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  labels:
    app: bazarr
    app.kubernetes.io/name: bazarr
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    traefik.ingress.kubernetes.io/max-body-size: "10M"
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: "1000"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "1000"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "1000"
    # nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "1000"
    traefik.ingress.kubernetes.io/readtimeout: "1000s"
    traefik.ingress.kubernetes.io/writetimeout: "1000s"
    traefik.ingress.kubernetes.io/idletimeout: "1000s"
spec:
  ingressClassName: traefik
  rules:
  - host: bazarr.pengiuns.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              number: 80
  tls:
  - hosts:
      - bazarr.pengiuns.com
    secretName: letsencrypt-wildcard-cert-pengiuns.com-production
