argocd/manifests/prod/apps/media/arr/radarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
    app.kubernetes.io/name: radarr
spec:
  serviceName: radarr
  replicas: 1
  # MAYBE
  # persistentVolumeClaimRetentionPolicy:
  #   whenScaled: Delete
  #   whenDeleted: Retain

  podManagementPolicy: OrderedReady

  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0

  selector:
    matchLabels:
      app: radarr

  template:
    metadata:
      labels:
        app: radarr
        app.kubernetes.io/name: radarr
    spec:
      securityContext:
        runAsUser: 321  #all processes in the pod run with user ID 321
        runAsGroup: 321  # same but for groups
        fsGroup: 321 # owner of attached volume is group 321
      containers:
        - name: radarr
          image: ghcr.io/hotio/radarr:release-6.4.4.10685
          securityContext:
            runAsUser: 0  # Temporary root for setup, not great, but does not work otherwise
            # runAsGroup: 321 # Remove later
            # fsGroup: 321 # Remove later
            allowPrivilegeEscalation: true
          imagePullPolicy: Always
          ports:
          - containerPort: 7878
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "2G"
              cpu: "200m"
          volumeMounts:
            - mountPath: /config  # Mount for Radarr config
              name: config-storage
            - mountPath: /data # Single volume for Movies and Downloads
              name: media-storage
      volumes:
        # MIGRATION: Switched to volumeClaimTemplates for config
        # - name: config-storage
        #   persistentVolumeClaim:
        #     claimName: pvc-radarr-config # PVC for config storage
        - name: media-storage
          persistentVolumeClaim:
            claimName: pvc-media   # PVC for data storage

  # Automatically manages config PVC - won't be deleted on rollouts
  volumeClaimTemplates:
  - metadata:
      name: config-storage
      annotations:
        k8up.io/backup: "true"
    spec:
      storageClassName: synology-storage-apps
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
spec:
  selector:
    app: radarr
  ports:
  - name: http
    port: 80 # we talk to this
    protocol: TCP
    targetPort: 7878 # app listens here
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  labels:
    app: radarr
    app.kubernetes.io/name: radarr
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/max-body-size: "10M"
    traefik.ingress.kubernetes.io/readtimeout: "1000s"
    traefik.ingress.kubernetes.io/writetimeout: "1000s"
    traefik.ingress.kubernetes.io/idletimeout: "1000s"
spec:
  ingressClassName: traefik
  rules:
  - host: radarr.pengiuns.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 80
  tls:
  - hosts:
      - radarr.pengiuns.com
    secretName: letsencrypt-wildcard-cert-pengiuns.com-production
